# imc-prosperity-4

./: .gitignore  README.md  p3_summary.md  p3_summary_frankfurthedgedogs.md
models_tutorial/: emerald_only.py  model_v1.py  model_v2.py
montercarlo_backtester/backtester/: pyproject.toml
montercarlo_backtester/backtester/prosperity3bt/: __init__.py  __main__.py  data.py  file_reader.py  models.py  monte_carlo.py  runner.py
montercarlo_backtester/backtester/prosperity4mcbt/: __main__.py  datamodel.py  monte_carlo.py
montercarlo_backtester/rust_simulator/: Cargo.toml
montercarlo_backtester/scripts/: python_strategy_worker.py
round_0/models/: datamodel.py  model_v0.py  model_v1.py  model_v2.py  model_v3.py  model_v4.py
round_0/tools/: backtest.py  fill_stats.py  generate_plots.py  mc_plots.py  montecarlo.py  replay.py
round_1/model_C_data/: 131140.json  131140.py
round_1/models/: ash_mm_v0.py  model_A.py  model_B.py  model_C.py  model_D.py  model_E.py  model_E_plus_1.py  model_E_plus_10.py  model_E_plus_11.py  model_E_plus_12.py  model_E_plus_13.py  model_E_plus_14.py  model_E_plus_15.py  model_E_plus_16.py  model_E_plus_2.py  model_E_plus_3.py  model_E_plus_4.py  model_E_plus_5.py  model_E_plus_6.py  model_E_plus_7.py  model_E_plus_8.py  model_E_plus_9.py  model_F1.py  model_F2.py  model_F3.py  model_F4.py  model_F5.py  model_G1.py  model_G2.py  model_G3.py  model_G4.py  model_G5.py  model_v3.py  model_v4.py  pepper_root_v0.py  pepper_root_v1.py  pepper_root_v2.py  pepper_root_v3.py
round_1/results/: model_abc_nolimit_comparison.csv  model_abc_nolimit_comparison.md  model_abc_pepper_backtest_comparison.csv  (+3 more)
tutorial_v0/: plots.py
visualizer/: .gitignore  ARCHITECTURE_REVIEW.md  AUDIT.md  CONTRIBUTING.md  LICENSE  README.md  app.js  index.html  server.py  smoke_test.py  styles.css
(+444 files in other folders)
